@@ -1,3 +1,8 @@
+x.x.x:
+ - IMAP client:
+   - Quote usernames and passwords with funny characters in them during
+     login.
+
 0.2.0:
  - SMTP server:
    - Now gives application-level code opportunity to set a different
